--- a/templates/activity_all_modal.html
+++ b/templates/activity_all_modal.html
@@ -12,7 +12,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
-	{% include "activity_all.html" with stream=stream %}
+	{% include "activity_object.html" with stream=stream %}
       </div>
       <div class="modal-footer">
         <button type="button" class="jb-submit-button-1" data-dismiss="modal">Close</button>
